--- a/AUTHORS
+++ b/AUTHORS
@@ -1,14 +1,84 @@
-The authors that have contributed to each package are listed after the
-name of the package:
+GNU Astronomy Utilities authors
+===============================
 
-ConvertType (astconvertt)     Mohammad Akhlaghi<akhlaghi@gnu.org>
-Convolve (astconvolve)        Mohammad Akhlaghi<akhlaghi@gnu.org>
-Header (astheader)            Mohammad Akhlaghi<akhlaghi@gnu.org>
-ImageCrop (astimgcrop)        Mohammad Akhlaghi<akhlaghi@gnu.org>
-ImageStatistics (astimgstat)  Mohammad Akhlaghi<akhlaghi@gnu.org>
-ImageWarp (astimgwarp)        Mohammad Akhlaghi<akhlaghi@gnu.org>
-MakeCatalog (astmkcatalog)    Mohammad Akhlaghi<akhlaghi@gnu.org>
-MakeNoise (astmknoise)        Mohammad Akhlaghi<akhlaghi@gnu.org>
-MakeProfiles (astmkprof)      Mohammad Akhlaghi<akhlaghi@gnu.org>
-NoiseChisel (astnoisechisel)  Mohammad Akhlaghi<akhlaghi@gnu.org>
-SubtractSky (astsubtractsky)  Mohammad Akhlaghi<akhlaghi@gnu.org>
+List of authors (based on commits in the version controlled source)
+who have contributed to this distribution of GNU Astronomy Utilities
+(Gnuastro). The format is: [Number of commits] [Name] [email]
+
+
+Aggregate list of all authors
+-----------------------------
+
+List of everyone who has made a commit irrespective of which part of
+Gnuastro they contribted to, the rows are ordered alphabetically.
+   192	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     6	Mosè Giordano <mose@gnu.org>
+
+
+Separated by part of Gnuastro
+-----------------------------
+
+Authors listed under the respective part of Gnuastro: utility,
+libraries, or documentation. Note that a single commit might include
+multiple parts of Gnuastro (especially the libraries and
+documentation). The authors in each part are sorted by their number of
+commits.
+
+Arithmetic
+     5	Mohammad Akhlaghi <akhlaghi@gnu.org>
+
+ConvertType
+    25	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     1	Mosè Giordano <mose@gnu.org>
+
+Convolve
+    32	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     1	Mosè Giordano <mose@gnu.org>
+
+CosmicCalculator
+     3	Mohammad Akhlaghi <akhlaghi@gnu.org>
+
+Header
+     6	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     1	Mosè Giordano <mose@gnu.org>
+
+ImageCrop
+    37	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     2	Mosè Giordano <mose@gnu.org>
+
+ImageStatistics
+    13	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     1	Mosè Giordano <mose@gnu.org>
+
+ImageWarp
+    21	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     1	Mosè Giordano <mose@gnu.org>
+
+MakeCatalog
+    34	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     1	Mosè Giordano <mose@gnu.org>
+
+MakeNoise
+    15	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     1	Mosè Giordano <mose@gnu.org>
+
+MakeProfile
+    40	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     1	Mosè Giordano <mose@gnu.org>
+
+NoiseChisel
+    52	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     1	Mosè Giordano <mose@gnu.org>
+
+SubtractSky
+    25	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     1	Mosè Giordano <mose@gnu.org>
+
+Libraries
+    90	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     2	Mosè Giordano <mose@gnu.org>
+
+Documentation
+   146	Mohammad Akhlaghi <akhlaghi@gnu.org>
+     3	Mosè Giordano <mose@gnu.org>
+
